tests/ui/impl-unpin.stderr
error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
 --> tests/ui/impl-unpin.rs:7:1
  |
7 | impl Unpin for Foo<'_> {}
  | ^^^^^^^^^^^^^^^-------
  | |              |
  | |              `Named` is not defined in the current crate
  | impl doesn't use only types from inside the current crate
  |
  = note: define and implement a trait or new type instead
